--- a/services/users/docker-compose-dev.yaml
+++ b/services/users/docker-compose-dev.yaml
@@ -4,13 +4,15 @@ services:
       context: .
       dockerfile: ./services/users/Dockerfile
     ports:
-      - "${USERS_SERVICE_PORT}:${USERS_SERVICE_PORT}"  
+      - "${USERS_SERVICE_PORT}:${USERS_SERVICE_PORT}"
+    environment:
+      - USERS_SERVICE_SECRET=supersecret 
 
   mongo-users-express:
     image: mongo-express:1.0.2-20-alpine3.19
     restart: unless-stopped
     networks:
-      - events-network
+      - users-network
     ports:
       - '${MONGO_EXPRESS_USERS_PORT}:8081'
     environment:
