--- a/docs/asyncAPI/asyncapi.yaml
+++ b/docs/asyncAPI/asyncapi.yaml
@@ -14,26 +14,23 @@ servers:
     description: RabbitMQ broker
 
 channels:
-  event.published:
-    description: Event emitted when an event is published
-    subscribe:
-      operationId: onEventPublished
-      message:
-        $ref: "#/components/messages/EventPublishedMessage"
+  events:
+    description: Domain events exchange
+    bindings:
+      amqp:
+        is: routingKey
+        exchange:
+          name: events
+          type: topic
+          durable: true
 
-  event.updated:
-    description: Event emitted when an event is updated
     subscribe:
-      operationId: onEventUpdated
+      operationId: onDomainEvent
       message:
-        $ref: "#/components/messages/EventUpdatedMessage"
-
-  event.deleted:
-    description: Event emitted when an event is deleted
-    subscribe:
-      operationId: onEventDeleted
-      message:
-        $ref: "#/components/messages/EventDeletedMessage"
+        oneOf:
+          - $ref: "#/components/messages/EventPublishedMessage"
+          - $ref: "#/components/messages/EventUpdatedMessage"
+          - $ref: "#/components/messages/EventDeletedMessage"
 
 components:
   messages:
@@ -41,6 +38,9 @@ components:
       name: EventPublished
       title: Event Published
       contentType: application/json
+      bindings:
+        amqp:
+          routingKey: event.published
       headers:
         $ref: "#/components/schemas/EventHeaders"
       payload:
@@ -50,6 +50,9 @@ components:
       name: EventUpdated
       title: Event Updated
       contentType: application/json
+      bindings:
+        amqp:
+          routingKey: event.updated
       headers:
         $ref: "#/components/schemas/EventHeaders"
       payload:
@@ -59,6 +62,9 @@ components:
       name: EventDeleted
       title: Event Deleted
       contentType: application/json
+      bindings:
+        amqp:
+          routingKey: event.deleted
       headers:
         $ref: "#/components/schemas/EventHeaders"
       payload:
@@ -92,7 +98,6 @@ components:
           type: array
           items:
             type: string
-          nullable: true
       required:
         - eventId
         - creatorId
@@ -106,7 +111,6 @@ components:
           type: array
           items:
             type: string
-          nullable: true
       required:
         - eventId
 
