--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.17.0",
+    "jwt-decode": "^4.0.0",
     "pinia": "^3.0.3",
     "quasar": "^2.18.6",
     "vue": "^3.5.22",
