--- a/infrastructure/gateway/docker-compose.yaml
+++ b/infrastructure/gateway/docker-compose.yaml
@@ -6,6 +6,8 @@ services:
     ports:
       - "${TRAEFIK_SERVICE_PORT}:80"
       - "${TRAEFIK_SECURE_SERVICE_PORT}:443"
+    environment:
+      - HOST=${HOST}
     volumes: 
       - /var/run/docker.sock:/var/run/docker.sock
       - ./infrastructure/gateway/config/config.yaml:/etc/traefik/traefik.yaml:ro
