--- a/infrastructure/message-broker/docker-compose.yaml
+++ b/infrastructure/message-broker/docker-compose.yaml
@@ -15,7 +15,12 @@ services:
       timeout: 5s
       retries: 100
       start_period: 200s
+    volumes:
+      - rabbitmq-data:/var/lib/rabbitmq
 
 networks:
   eventonight-network:
     driver: bridge
+
+volumes:
+  rabbitmq-data:
