chore(docker-compose): add docker compose for chat service

--- a/.env.template
+++ b/.env.template
@@ -23,3 +23,5 @@ MONGO_EXPRESS_INTERACTIONS_PORT=9031
 RABBITMQ_USER=admin
 RABBITMQ_PASS=
 RABBITMQ_PORT=5672
+CHAT_SERVICE_PORT=9040
+MONGO_EXPRESS_CHAT_PORT=9041
