--- a/docs/openAPI/openapi/chat.yaml
+++ b/docs/openAPI/openapi/chat.yaml
@@ -250,7 +250,7 @@ paths:
           required: false
           schema:
             type: integer
-            default: 20
+            default: 50
         - name: offset
           in: query
           required: false
@@ -399,5 +399,5 @@ components:
         - conversationId
         - senderId
         - content
-        - timestamp
+        - createdAt
     
