--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -33,6 +33,7 @@ jobs:
             services/events/build/reports/jacoco/test/jacocoTestReport.xml
             services/media/coverage/lcov.info
             services/interactions/coverage/lcov.info
+            services/chat/coverage/lcov.info
           flags: unittests
           fail_ci_if_error: true
       
