chore(paymanets): setup checkout

--- a/services/payments/Dockerfile
+++ b/services/payments/Dockerfile
@@ -2,11 +2,11 @@ FROM node:20-slim AS builder
 WORKDIR /home/app
 
 COPY ./services/payments/package.json ./
-RUN npm install
+RUN npm install --legacy-peer-deps
 COPY ./services/payments/tsconfig*.json ./services/payments/nest-cli.json ./
 COPY ./services/payments/src ./src
 RUN npm run build
-RUN npm prune --omit=dev
+RUN npm prune --omit=dev --legacy-peer-deps
 
 FROM node:20-slim AS runner
 WORKDIR /home/app
