--- a/infrastructure/authentication/docker-compose.yaml
+++ b/infrastructure/authentication/docker-compose.yaml
@@ -25,9 +25,7 @@ services:
       KC_DB_PASSWORD: ${POSTGRES_PASSWORD}
       KC_DB_SCHEMA: public
       KC_HTTP_ENABLED: "true"
-      KC_HOSTNAME: auth.${KC_HOSTNAME}
-      KC_HOSTNAME_STRICT: "false"
-      KC_PROXY: edge
+      KC_HOSTNAME: ${KC_HOSTNAME}
       KC_LOGLEVEL: INFO
       KC_METRICS_ENABLED: "true"
       KC_BOOTSTRAP_ADMIN_USERNAME: ${KEYCLOAK_ADMIN}
@@ -36,8 +34,7 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.auth.rule=Host(`auth.${HOST}`)"
       - "traefik.http.routers.auth.entrypoints=web"
-      - "traefik.http.services.auth.loadbalancer.server.port=8080"
-      - "traefik.http.routers.auth.service=auth"  
+      - "traefik.http.services.auth.loadbalancer.server.port=8080"  
 
     ports:
       - "${KEYCLOAK_PORT}:8080"
