chore(payments): add docker configuration

--- a/.env.template
+++ b/.env.template
@@ -25,3 +25,5 @@ RABBITMQ_PASS=
 RABBITMQ_PORT=5672
 CHAT_SERVICE_PORT=9040
 MONGO_EXPRESS_CHAT_PORT=9041
+PAYMENTS_SERVICE_PORT=9050
+MONGO_EXPRESS_PAYMENTS_PORT=9051
