chore(payments): add coverage report in build workflow

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -34,6 +34,7 @@ jobs:
             services/media/coverage/lcov.info
             services/interactions/coverage/lcov.info
             services/chat/coverage/lcov.info
+            services/payments/coverage/lcov.info
           flags: unittests
           fail_ci_if_error: true
       
